--- a/Lessons/Lesson8/task5/style.css
+++ b/Lessons/Lesson8/task5/style.css
@@ -5,13 +5,13 @@ div{
     border: 3px solid black;
     padding: 50px;
   }
-  .rect2{
+  div>div{
     background-color: yellow;
   }
-  .rect3{
+  div>div>div{
     background-color: green;
   }
-  .rect4{
+  div>div>div>div{
     background-color: pink;
   }
   
