--- a/Lessons/Lesson8/task5/style.css
+++ b/Lessons/Lesson8/task5/style.css
@@ -1,17 +1,21 @@
-
+body{
+  margin: 50px;
+}
 div{
-    background-color: blue;
-    box-sizing: border-box;
-    border: 3px solid black;
-    padding: 50px;
-  }
-  div>div{
-    background-color: yellow;
-  }
-  div>div>div{
-    background-color: green;
-  }
-  div>div>div>div{
-    background-color: pink;
-  }
-  
+  box-sizing: border-box;
+  background-color: blue;
+  border: 3px solid black;
+  padding: 50px;
+}
+div>div{
+  background-color: yellow;
+  box-sizing: border-box;
+}
+div>div>div{
+  background-color: green;
+  box-sizing: border-box;
+}
+div>div>div>div{
+  background-color: pink;
+  box-sizing: border-box;
+}
