--- a/Lessons/Lesson8/task6/style.css
+++ b/Lessons/Lesson8/task6/style.css
@@ -1,27 +1,31 @@
-body>div{
-  margin: 50px;
+*{
+  box-sizing: border-box;;
 }
 .rect{
   height: 50px;
   width: 100px;
   background-color: forestgreen;
   border-radius: 16px;
+  margin: 50px;
 }
 .oval{
   height: 50px;
   width: 100px;
   background-color: darkmagenta;
   border-radius: 50%;
+  margin: 50px;
 }
 .circle{
   height: 100px;
   width: 100px;
   background-color: aquamarine;
   border-radius: 50%;
+  margin: 50px;
 }
 .triangle{
- width: 50px;
- height: 100px;
+  margin: 50px;
+  width: 50px;
+  height: 100px;
   border: 25px solid transparent;
   border-top-color: brown;
 }
