--- a/Lessons/Lesson8/task6/style.css
+++ b/Lessons/Lesson8/task6/style.css
@@ -1,5 +1,5 @@
 *{
-  box-sizing: border-box;;
+  box-sizing: border-box;
 }
 .rect{
   height: 50px;
@@ -24,8 +24,8 @@
 }
 .triangle{
   margin: 50px;
-  width: 50px;
-  height: 100px;
-  border: 25px solid transparent;
+  height: 50px;
+  width: 100px;
+  border: 50px solid transparent;
   border-top-color: brown;
 }
