--- a/Lessons/Lesson9/task1/style.css
+++ b/Lessons/Lesson9/task1/style.css
@@ -18,10 +18,6 @@ div {
   height: 100px;
   background-color: yellowgreen;
 }
-.static-parent {
-  position: static;
-}
-
 .child {
   background: yellow;
   position: absolute;
@@ -43,10 +39,13 @@ div {
 .container {
   height: 2000px;
 }
+.static-parent{
+  position: static;
+}
 .relative-parent{
   position: relative; 
   bottom: 20px;
-  right: 50px;
+  left: 50px;
 }
 .absolute-parent{
   position: absolute;
