--- a/Lessons/Lesson9/task5/style.css
+++ b/Lessons/Lesson9/task5/style.css
@@ -1,71 +1,85 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
-.header{
-  background-color: darkturquoise;
-  height: 50px;
-  padding-left: 45px;
+.header {
+  display: flex;
   position: fixed;
   width: 100%;
+  height: 40px;
+  background-color: darkturquoise;
+  z-index: 5;
 }
-.main{
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  margin-left: 48px;
+  list-style: none;
+  height: 40px;
+}
+
+nav ul li {
+  display: flex;
+  align-items: center;
+  margin-left: 16px;
+  color: white;
+  height: 100%;
+}
+
+main {
   height: 5000px;
   background-color: beige;
-  padding-top: 92px;
-  padding-left: 30%;
 }
-.nav-item{
-  display: inline-block;
-  margin-left: 16px;
-  padding-top: 15px;
-}
-.nav-item:nth-child(1){
-  color: white;
-}
-.nav-item:nth-child(2){
-  color: white;
-}
-.nav-item:nth-child(3){
-  color: white;
-}
-.square{
-  width: 200px;
+
+.head {
   height: 200px;
-  background-color: mediumaquamarine;
-}
-.circle1{
-  float: left;
-  height: 30px;
-  width: 30px;
-  background-color: grey;
-  border-radius: 50%;
-  position: relative;
-  margin-top: 80px;
-  margin-left: 40px;
-}
-.circle2{
-  float: right;
-  height: 30px;
-  width: 30px;
-  background-color: grey;
-  border-radius: 50%;
-  position: relative;
-  margin-top: 80px;
-  margin-right: 40px;
-}
-.square1{
-  background-color: brown;
-  height: 60px;
-  width: 40px;
-  display: inline-block;
-  margin-left: -39px;
-  margin-bottom: -4px;
-}
-.square2{
-  background-color: brown;
-  height: 60px;
-  width: 40px;
-  display: inline-block;
-  margin-left: 194px;
-  margin-bottom: -4px;
+  width: 200px;
+  background-color: #7effd4;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* display: block; */
+  left: 50%;
 }
 
+.ear {
+  position: absolute;
+  width: 40px;
+  height: 60px;
+  background-color: brown;
+}
 
+.eye {
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  background-color: grey;
+}
+
+.ear_left {
+  left: -40px;
+  top: -60px;
+}
+
+.ear_right {
+  top: -60px;
+  left: 200px;
+}
+
+.eye_left {
+  top: 80px;
+  left: 40px;
+}
+
+.eye_right {
+  top: 80px;
+  right: 40px;
+}
