--- a/Lessons/Lesson9/task5/style.css
+++ b/Lessons/Lesson9/task5/style.css
@@ -27,7 +27,7 @@ nav ul {
 nav ul li {
   display: flex;
   align-items: center;
-  padding-left: 16px;
+  margin-left: 16px;
   color: white;
   height: 100%;
 }
