--- a/Lessons/Lesson9/task5/style.css
+++ b/Lessons/Lesson9/task5/style.css
@@ -32,6 +32,9 @@ nav ul li {
   height: 100%;
 }
 nav ul li:nth-child(2){
+  margin-left: 21px;
+}
+nav ul li:nth-child(3){
   margin-left: 22px;
 }
 
