--- a/Lessons/Lesson12/task1/style.css
+++ b/Lessons/Lesson12/task1/style.css
@@ -1,29 +1,35 @@
-html{
-  font-family: Roboto, sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
 }
-section{
+
+.content {
   margin: 32px;
 }
-h1{
+
+.h1__title {
   word-spacing: 20px;
-  text-transform: uppercase;
   text-align: center;
+  text-transform: uppercase;
 }
-.paragraph{
+
+.paragraph {
   line-height: 28px;
 }
-.technology{
-  font-weight: 900;
-  letter-spacing: 3px;
+
+.techology {
   font-size: 24px;
-  text-decoration: underline;
   opacity: 0.8;
+  letter-spacing: 3px;
+  text-decoration: underline;
 }
+
 .translation {
   font-style: italic;
   color: gray;
 }
-a{
+
+a {
   text-decoration: none;
 }
