--- a/Lessons/Lesson12/task2/style.css
+++ b/Lessons/Lesson12/task2/style.css
@@ -1,26 +1,26 @@
-body {
-  font-family: 'Verdana', sans-serif;
+* {
+  box-sizing: border-box;
 }
 
-header {
-  margin: auto;
-  font-size: 74px;
-  width: 50vw;
+body {
+  font-family: Verdana;
 }
 
 header h1 {
-  margin: 16px 0;
-  text-align: center;
+  width: 50vw;
+  margin: 0 auto;
+  font-size: 74px;
   overflow: hidden;
   white-space: nowrap;
+  text-align: center;
   text-overflow: ellipsis;
 }
 
 div {
-  height: 216px;
+  height: 200px;
+  line-height: 200px;
   background-color: coral;
   color: white;
   text-align: center;
   text-transform: uppercase;
-  line-height: 200px;
 }
