--- a/Lessons/Lesson14/task1/style.css
+++ b/Lessons/Lesson14/task1/style.css
@@ -4,7 +4,7 @@ html{
 .properties-list__item{
   color: #f39;
   font-size: 24px;
-  list-style: none;
+  list-style-type: none;
   line-height: 32px;
 }
 .properties-list__item {
