--- a/Lessons/Lesson14/task1/style.css
+++ b/Lessons/Lesson14/task1/style.css
@@ -1,7 +1,7 @@
 html{
   font-size: 18px;
 }
-.properties-list__item{
+.properties-list{
   color: #f39;
   font-size: 24px;
   list-style-type: none;
