--- a/Lessons/Lesson14/task2/style.css
+++ b/Lessons/Lesson14/task2/style.css
@@ -1,8 +1,12 @@
-body .rectangle {
+* {
+  box-sizing: border-box;
+}
+
+.rectangle {
   background-color: blueviolet;
 }
 
-.text.new::first-letter {
+.new.text::first-letter {
   font-size: 24px;
   color: green;
 }
