--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 input[type="checkbox"] {
   visibility: hidden;
   width: 0;
@@ -16,7 +19,8 @@ input[type="checkbox"] {
 
 .checkbox {
   position: relative;
-  padding-left: 30px;
+  padding-left: 35px;
+  /*margin: 16px;*/
   font-size: 24px;
 }
 
