--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -20,7 +20,7 @@ input[type="checkbox"] {
 .checkbox {
   position: relative;
   padding-left: 35px;
-  /*margin: 16px;*/
+  margin: 16px;
   font-size: 24px;
 }
 
