--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -1,3 +1,6 @@
+body{
+  margin: 16px;
+}
 input[type="checkbox"] {
   visibility: hidden;
   width: 0;
@@ -17,7 +20,6 @@ input[type="checkbox"] {
 .checkbox {
   position: relative;
   padding-left: 35px;
-  margin: 16px;
   font-size: 24px;
 }
 
