--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -1,6 +1,4 @@
-body{
-  margin: 16px;
-}
+
 input[type="checkbox"] {
   visibility: hidden;
   width: 0;
@@ -18,9 +16,10 @@ input[type="checkbox"] {
 }
 
 .checkbox {
-  position: relative;
+  position: absolute;
   padding-left: 35px;
   font-size: 24px;
+  margin: 16px;
 }
 
 .checkbox input:checked+.checkmark {
