--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -16,10 +16,11 @@ input[type="checkbox"] {
 }
 
 .checkbox {
-  position: absolute;
+  position: relative;
   padding-left: 35px;
   font-size: 24px;
   margin: 16px;
+  top: 16px;
 }
 
 .checkbox input:checked+.checkmark {
