--- a/Lessons/Lesson16/task5/style.css
+++ b/Lessons/Lesson16/task5/style.css
@@ -3,9 +3,9 @@ form{
   margin: 32px;
   display: block;
 }
-input, textarea{
+input, textarea, div{
   display: block;
-  margin: 12px;
+  margin: 16px;
 }
 
 .languages input{
@@ -13,7 +13,5 @@ input, textarea{
   margin: 0 auto;
   margin-right: 5px;
 }
-div{
-  margin: 12px;
-}
+
 
