--- a/Lessons/Lesson16/task3/style.css
+++ b/Lessons/Lesson16/task3/style.css
@@ -1,4 +1,3 @@
-
 input[type="checkbox"] {
   visibility: hidden;
   width: 0;
@@ -16,11 +15,14 @@ input[type="checkbox"] {
 }
 
 .checkbox {
+  display: block;
   position: relative;
   padding-left: 35px;
+  margin: 16px;
   font-size: 24px;
 }
 
 .checkbox input:checked+.checkmark {
   background-color: #006400;
 }
+
