--- a/Lessons/Lesson18/task3/style.css
+++ b/Lessons/Lesson18/task3/style.css
@@ -1,6 +1,6 @@
 .icon{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .fa-battery-ful{
   font-size: 16px;
