--- a/Lessons/Lesson19/task3/style.css
+++ b/Lessons/Lesson19/task3/style.css
@@ -28,7 +28,7 @@
   width: 10px;
   height: 4px;
   border-radius: 2px;
- 
+  animation: moving 2s infinite alternate, blinking 2s linear infinite;
 }
 
 @keyframes moving {
@@ -37,7 +37,7 @@
       opacity: 1;
   }
   to {
-      left: 50px;
+      left: 70px;
   }
 }
 
