--- a/Lessons/Lesson19/task3/style.css
+++ b/Lessons/Lesson19/task3/style.css
@@ -12,11 +12,11 @@
 
 .spinner {
   position: relative;
+  animation: blinking 2s infinite;
+  animation: blinking 2s linear infinite;
 }
 
 .spinner-text {
-  animation: blinking 2s infinite;
-  animation: blinking 2s linear infinite;
   font-size: 16px;
   text-transform: uppercase;
   font-family: monospace;
@@ -28,7 +28,9 @@
   width: 10px;
   height: 4px;
   border-radius: 2px;
-  animation: moving 2s infinite alternate, blinking 2s linear infinite;
+  animation: moving 2s linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes moving {
