--- a/Lessons/Lesson19/task3/style.css
+++ b/Lessons/Lesson19/task3/style.css
@@ -4,26 +4,26 @@
 
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 100vw;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .spinner {
   position: relative;
-  animation: blinking 2s infinite;
-  animation: blinking 2s linear infinite;
+  animation: blinking 2s linear;
+  animation-iteration-count: infinite;
 }
 
 .spinner-text {
+  font-family: monospace;
   font-size: 16px;
   text-transform: uppercase;
-  font-family: monospace;
 }
 
 .rect {
-  position: absolute;
   background-color: black;
   width: 10px;
   height: 4px;
