--- a/Lessons/Lesson20/task3/style.css
+++ b/Lessons/Lesson20/task3/style.css
@@ -5,18 +5,18 @@
   height: 100vh;
   width: 100vw;
 }
+.spinner {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
 .spinner-text {
   font-family: monospace;
   font-size: 16px;
   text-transform: uppercase;
   animation: blinking 2s linear infinite;
-}
-
-.spinner {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  color: lightslategrey;
 }
 
 .circle {
