--- a/Lessons/Lesson20/task3/style.css
+++ b/Lessons/Lesson20/task3/style.css
@@ -16,7 +16,7 @@
   font-size: 16px;
   text-transform: uppercase;
   animation: blinking 2s linear infinite;
-  color: lightslategrey;
+  color: rgb(212, 214, 216);
 }
 
 .circle {
