--- a/Lessons/Lesson22/task4/style.css
+++ b/Lessons/Lesson22/task4/style.css
@@ -1,4 +1,4 @@
-* {
+*{
   box-sizing: border-box;
 }
 html {
@@ -26,7 +26,7 @@ html {
 .navigation {
   visibility: hidden;
   margin: 1.5em .5em;
-  max-width: 20vw;
+  max-width: 20%;
 }
 .nav-list {
   padding: 0;
@@ -37,7 +37,8 @@ html {
   background-color: #808080;
   color: white;
   height: 2em;
-  padding: 0.5em 0;
+  padding: -0.5em 0;
+  margin-top: 10px;
 }
 
 .nav-list-link {
