--- a/Lessons/Lesson22/task5/style.css
+++ b/Lessons/Lesson22/task5/style.css
@@ -101,25 +101,29 @@ body {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 900px) {
   .main {
       display: flex;
+      flex-direction: row;
       flex-wrap: wrap;
-      align-content: flex-start;
-  }
-  .navigation {
-      width: 20%;
+      width: 100%;
   }
   .section {
       width: 80%;
   }
-}
-
-@media screen and (min-width: 900px) {
-  .section {
-      width: 60%;
-  }
   .news {
-      width: 20%;
+      width: 100%;
+  }
+  @media screen and (max-width: 600px) {
+      .main {
+          display: flex;
+          flex-direction: row;
+          /* width: 100%; */
+      }
+      .section,
+      .news,
+      .navigation {
+          width: 100%;
+      }
   }
 }
