--- a/Lessons/Lesson22/task5/style.css
+++ b/Lessons/Lesson22/task5/style.css
@@ -101,29 +101,25 @@ body {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 600px) {
   .main {
       display: flex;
-      flex-direction: row;
       flex-wrap: wrap;
-      width: 100%;
+      align-content: flex-start;
+  }
+  .navigation {
+      width: 20%;
   }
   .section {
       width: 80%;
   }
-  .news {
-      width: 100%;
+}
+
+@media screen and (min-width: 900px) {
+  .section {
+      width: 60%;
   }
-  @media screen and (max-width: 600px) {
-      .main {
-          display: flex;
-          flex-direction: row;
-          /* width: 100%; */
-      }
-      .section,
-      .news,
-      .navigation {
-          width: 100%;
-      }
+  .news {
+      width: 20%;
   }
 }
