--- a/Lessons/Lesson22/task5/style.css
+++ b/Lessons/Lesson22/task5/style.css
@@ -101,7 +101,7 @@ body {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
   .main {
       display: flex;
       flex-wrap: wrap;
@@ -115,11 +115,14 @@ body {
   }
 }
 
-@media screen and (min-width: 900px) {
-  .section {
-      width: 60%;
+@media screen and (max-width: 600px) {
+  .main {
+      display: flex;
+      flex-direction: row;
   }
-  .news {
-      width: 20%;
+  .section,
+  .news,
+  .navigation {
+      width: 100%;
   }
 }
