--- a/Lessons/Lesson22/task5/style.css
+++ b/Lessons/Lesson22/task5/style.css
@@ -101,11 +101,12 @@ body {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .main {
       display: flex;
       flex-wrap: wrap;
-      align-content: flex-start;
+      flex-direction: row;
+      width: 100%;
   }
   .navigation {
       width: 20%;
