--- a/Lessons/Lesson23/task1/style.css
+++ b/Lessons/Lesson23/task1/style.css
@@ -6,18 +6,13 @@
 .nav-list {
   padding: 0;
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   list-style-type: none;
   height: 56px;
   color: #fff;
   font-weight: 700;
 }
-
 .nav-list__item {
   background-color: #ff7f50;
   padding: 8px;
@@ -25,12 +20,20 @@
   border-radius: 4px;
   cursor: pointer;
 }
-
 .nav-list__item_selected {
   background-color: #fb0;
 }
-
 .nav-list__item:hover {
   opacity: 0.7;
 }
-/*# sourceMappingURL=header.css.map */
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/*# sourceMappingURL=style.css.map */
