--- a/Lessons/Lesson23/task3/style/style.scss
+++ b/Lessons/Lesson23/task3/style/style.scss
@@ -35,6 +35,9 @@ nav {
           background-color: #9acd32;
       }
   }
+  .text-active {
+    color: #ff0;
+  }
   .menu__item_active {
     &:hover .submenu{
       display: block;
